style: fix some style warnings (redundant semicolon etc.)